# ecohub

./: .gitignore  README.md  package-lock.json
backend/: .gitignore  README.md  ecohub-9087f-firebase-adminsdk-fbsvc-465c7d81ca.json  pyproject.toml  start.sh
backend/app/: __init__.py  config.py  main.py  shared.py
backend/app/action_log/: action_log_model.py  action_log_route.py  action_log_service.py
backend/app/actuator/: actuator_model.py  actuator_route.py  actuator_service.py
backend/app/alter/: alter_model.py  alter_route.py  alter_service.py
backend/app/command/: command_model.py  command_route.py  command_service.py
backend/app/crop_profile/: crop_profile_model.py  crop_profile_route.py  crop_profile_service.py
backend/app/device/: device_model.py  device_route.py  device_service.py
backend/app/field/: __init__.py  field_model.py  field_route.py  field_service.py
backend/app/middleware/: auth.py
backend/app/readings_actuator_history/: reading_actuator_history_model.py  reading_actuator_history_route.py  reading_actuator_history_service.py
backend/app/readings_history/: reading_history_model.py  reading_history_route.py  reading_history_service.py
backend/app/scheduler/: __init__.py  scheduler_model.py  scheduler_route.py  scheduler_service.py
backend/app/sensor/: sensor_model.py  sensor_route.py  sensor_service.py
backend/app/services/: command_service.py  database.py  email_service.py  firebase_auth.py  mqtt_service.py  notification_service.py  scheduler_service.py
backend/app/templates/: notification.html
frontend/: package.json  (+2 more)
(+68 files in other folders)
